# MLOPS-project2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: data_module.py  model.py  train.py
