[project]
name = "mlops-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "scikit-learn>=1.5.2",
    "scipy>=1.11.0",
    "lightning>=2.5.5",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
